<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.framgent.AddStudentFragment">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/name_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:padding="@dimen/standard_margin"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:layout_marginTop="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/family_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/family"
        android:padding="@dimen/standard_margin"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_edt"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/national_code_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/national_code"
        android:padding="@dimen/standard_margin"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:inputType="number"
        android:maxLength="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/family_edt"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/score_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/score"
        android:padding="@dimen/standard_margin"
        android:inputType="number"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/national_code_edt"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/score_edt"
        android:layout_margin= "@dimen/standard_margin">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/male_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:padding="@dimen/small_margin"
            android:checked="true"
            />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/female_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:padding="@dimen/small_margin"/>
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/standard_margin"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>